add get user list interface and test pass.

--- a/htmlRoot/index.html
+++ b/htmlRoot/index.html
@@ -143,7 +143,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
         var json_obj_data={userName:username,password:password};//现在不需要json对象
         //var url="/login.do";
-        var url=url_prefix + "webccDemo/login.do";
+        var url=url_prefix + "webccDemo/user/login.do";
 
         console.log('userName=' + username + ",password=" + password);
 
