--- a/htmlRoot/share/share_footer.html
+++ b/htmlRoot/share/share_footer.html
@@ -1,6 +1,7 @@
 <div class="page-footer">
-    <div class="page-footer-inner"> 2017 &copy; 周界软件
-        <a target="_blank" href="http://keenthemes.com">浙江诺可电子科技发展有限公司</a> &nbsp;|&nbsp;
+    <div class="page-footer-inner">
+        2020 &copy; C++程序后台 - web协议 增删改查 实现 演示
+        <a target="_blank" href="http://keenthemes.com">XXX公司</a> &nbsp;|&nbsp;
         <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" title="Purchase Metronic just for 27$ and get lifetime updates for free" target="_blank">购买!</a>
     </div>
     <div class="scroll-to-top">
