为示例代码添加了命令行支持!

--- a/htmlRoot/index.html
+++ b/htmlRoot/index.html
@@ -46,7 +46,8 @@ License: You must have a valid license purchased only from themeforest(the above
     <!-- END PAGE LEVEL STYLES -->
     <!-- BEGIN THEME LAYOUT STYLES -->
     <!-- END THEME LAYOUT STYLES -->
-    <link rel="shortcut icon" href="favicon.ico" /> </head>
+    <link rel="shortcut icon" href="favicon.ico" />
+</head>
 <!-- END HEAD -->
 
 <body class=" login">
@@ -89,7 +90,7 @@ License: You must have a valid license purchased only from themeforest(the above
     </div>
     <!-- END LOGIN -->
     <!-- BEGIN COPYRIGHT -->
-    <div class="copyright"> 2017 &copy; 宁波老开教育软件开发有限公司 - 前端实现演示. </div>
+    <div class="copyright"> 2017 &copy; 默认登陆用户名, 密码分别为admin 123 - 前端实现演示. </div>
     <!-- END COPYRIGHT -->
     <!--[if lt IE 9]>
     <script src="../assets/global/plugins/respond.min.js"></script>
